done CRM web part 1

--- a/views/about.erb
+++ b/views/about.erb
@@ -1,4 +1,8 @@
-<h1>*****HHHHEEEELLLLOOOOOO********</h1>
+<h1> About </h1>
+
+<ul>
+  Hey... this is meeeee......   I like stuffffff.......
+</ul>
 
 
 <footer>
